# swe

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum
.agents/skills/agent-browser/: SKILL.md
cmd/api/: main.go
cmd/cli/: main.go
cmd/worker/: main.go
config/: litellm.example.yaml
config/dynamicconfig/: development-sql.yaml
crates/swe-api/: Cargo.toml
crates/swe-api/src/: lib.rs  main.rs
crates/swe-api/src/auth/: mod.rs
crates/swe-api/src/rest/: agents.rs  artifacts.rs  health.rs  mod.rs  projects.rs  settings.rs  work.rs
crates/swe-api/src/websocket/: mod.rs
crates/swe-cli/: Cargo.toml
crates/swe-cli/src/: api_client.rs  main.rs
crates/swe-cli/src/commands/: agents.rs  artifacts.rs  chat.rs  config.rs  mod.rs  project.rs  run.rs  sandbox.rs  status.rs  work.rs
crates/swe-cli/src/output/: mod.rs
crates/swe-core/: Cargo.toml
crates/swe-core/src/: db.rs  lib.rs
crates/swe-core/src/config/: mod.rs
crates/swe-core/src/db/: agents.rs  artifacts.rs  mod.rs  projects.rs  work_items.rs
crates/swe-core/src/errors/: mod.rs
crates/swe-core/src/roles/: mod.rs
crates/swe-core/src/types/: agent.rs  artifact.rs  mod.rs  project.rs  work_item.rs
crates/swe-sandbox/: Cargo.toml
crates/swe-sandbox/src/: lib.rs
crates/swe-sandbox/src/images/: mod.rs
crates/swe-sandbox/src/runtime/: mod.rs
crates/swe-sandbox/src/volume/: mod.rs
crates/swe-temporal/: Cargo.toml
crates/swe-temporal/src/: lib.rs  main.rs
crates/swe-temporal/src/activities/: artifact.rs  container.rs  llm.rs  mod.rs  tools.rs
crates/swe-temporal/src/signals/: mod.rs
crates/swe-temporal/src/workflows/: agent.rs  mod.rs  orchestrator.rs  project.rs  sandbox.rs
docs/: design.pen
docs/plans/: 2026-03-11-swe-platform-design.md  2026-03-12-swe-platform-wiring.md  2026-03-12-web-ui-remediation-design.md  2026-03-12-web-ui-remediation-plan.md  2026-03-14-cosmo-opencode-integration-plan.md  2026-03-15-ui-audit-remediation-plan.md
docs/superpowers/plans/: 2026-03-15-project-detail-chat-first-redesign.md  2026-03-15-summary-tab.md
docs/superpowers/specs/: 2026-03-14-cosmo-opencode-integration-design.md  2026-03-15-summary-tab-design.md
internal/api/: server.go
internal/config/: config.go
internal/core/: errors.go  response.go  types.go
internal/db/: agents.go  artifacts.go  db.go  messages.go  notifications.go  projects.go  work_items.go
internal/opencode/: client.go  manager.go
internal/sandbox/: manager.go
internal/temporal/: worker.go
internal/temporal/activities/: activities.go
internal/temporal/workflows/: agent.go  orchestrator.go  project.go  sandbox.go
migrations/: 001_initial_schema.sql  002_chat_messages.sql  003_cosmo_opencode.sql
proto/swe/v1/: agent.proto  events.proto  project.proto  work.proto
sandbox-images/base/: Dockerfile
sandbox-images/coder/: Dockerfile
sandbox-images/sdet/: Dockerfile
scripts/: init-db.sh  worker-start.sh  worker-stop.sh
web/: Dockerfile  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx
web/src/app/(app)/: error.tsx  layout.tsx
web/src/app/(app)/dashboard/: error.tsx  page.tsx
web/src/app/(app)/projects/: error.tsx  page.tsx
web/src/app/(app)/projects/[id]/: error.tsx  page.tsx
web/src/app/(app)/projects/[id]/agents/[agentId]/: error.tsx  page.tsx
web/src/app/(app)/projects/new/: page.tsx
web/src/app/(app)/settings/: error.tsx  page.tsx
web/src/components/: sidebar.tsx  theme-toggle.tsx
web/src/components/agent/: code-activity.tsx  conversation-panel.tsx
web/src/components/project/: agent-avatars.tsx  agent-chat-dialog.tsx  agents-sidebar.tsx  artifacts-panel.tsx  chat-panel.tsx  cosmo-chat-panel.tsx  inbox-panel.tsx  kanban-board.tsx  summary-panel.tsx  work-item-detail.tsx
web/src/components/settings/: k8s-config.tsx  llm-config.tsx  platform-status.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx
web/src/lib/: api.ts  config.ts  types.ts  utils.ts  ws.ts
