[workspace]
resolver = "2"
members = [
    "crates/swe-core",
    "crates/swe-temporal",
    "crates/swe-api",
    "crates/swe-cli",
    "crates/swe-sandbox",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/drewpayment/swe"
authors = ["Drew Payment <drew@hoytlabs.app>"]

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP / API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.6"

# gRPC
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"

# Temporal
temporal-sdk-core = "0.1"
temporal-client = "0.1"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.0"
indicatif = "0.17"
dialoguer = "0.11"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates
swe-core = { path = "crates/swe-core" }
swe-temporal = { path = "crates/swe-temporal" }
swe-api = { path = "crates/swe-api" }
swe-sandbox = { path = "crates/swe-sandbox" }
