[package]
name = "swe-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST and gRPC API server for SWE platform"

[[bin]]
name = "swe-api"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
swe-core = { workspace = true }
swe-temporal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
