[package]
name = "swe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for the SWE agentic platform"

[[bin]]
name = "swe"
path = "src/main.rs"

[dependencies]
swe-core = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
anyhow = { workspace = true }
toml = { workspace = true }
