[package]
name = "swe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types, configuration, and shared logic for SWE platform"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = "6.0"
sqlx = { workspace = true }
tokio = { workspace = true }
