[package]
name = "swe-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "K8s sandbox management for SWE agent execution environments"

[dependencies]
swe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
