[package]
name = "swe-temporal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Temporal workflows and activities for SWE platform"

[dependencies]
swe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# Note: temporal-sdk-core is not yet stable on crates.io
# Using stub implementations for now - will integrate when SDK stabilizes
# temporal-sdk-core = { workspace = true }
