[package]
name = "swe-temporal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Temporal workflows and activities for SWE platform"

[[bin]]
name = "swe-worker"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { workspace = true }
swe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

# Temporal Rust SDK (prerelease)
temporalio-sdk = { workspace = true }
temporalio-client = { workspace = true }
temporalio-sdk-core = { workspace = true }
temporalio-macros = { workspace = true }
sqlx = { workspace = true }
